@@ -1,5 +1,0 @@
-#	$NetBSD: Makefile,v 1.1 2020/06/27 06:50:00 rin Exp $
-
-BSD_MK_COMPAT_FILE=${.CURDIR}/bsd.powerpc-ibm4xx.mk
-
-.include "../../compatsubdir.mk"
