@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2816 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2817 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -389,3 +389,4 @@ Changes from NetBSD 9.0 to NetBSD 10.0:
 		[tsutsui 20210709]
 	kernel: Tie the maximum file lock per unprivilegied uid to 
 		kern.maxfiles [manu 20210727]
+	evbppc: Switch ibm4xx to generic evbppc kernel modules. [rin 20210803]
